--- a/config.env
+++ b/config.env
@@ -247,9 +247,9 @@ export MIXED_PRECISION="bf16"                # Might not be supported on all GPU
 export PURE_BF16=true
 
 # This has to be changed if you're training with multiple GPUs.
-export TRAINING_NUM_PROCESSES=2
+export TRAINING_NUM_PROCESSES=1
 export TRAINING_NUM_MACHINES=1
-export ACCELERATE_EXTRA_ARGS="--multi_gpu"                          # --multi_gpu or other similar flags for huggingface accelerate
+export ACCELERATE_EXTRA_ARGS=""                          # --multi_gpu or other similar flags for huggingface accelerate
 
 # With Pytorch 2.1, you might have pretty good luck here.
 # If you're using aspect bucketing however, each resolution change will recompile. Seriously, just don't do it.
